# OpenViking_Curator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI-CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MIXED_MODE.md  README.md  README_CN.md  REFACTOR_PLAN.md  ROADMAP.md  SOFT_INTEGRATION.md  TODO.md  batch_ingest.py  curator.py  curator_query.py  curator_v0.py  dedup.py  dedup_log.json  docker-compose.yml  docker-test.sh  eval_batch.py  feedback_store.py  freshness_rescan.py  maintenance.py  mcp_server.py  memory_capture.py  metrics.py  openviking_memory_bridge.py  ov.conf.example  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  search_providers.py  (+3 more)
.github/workflows/: ci.yml
curator/: __init__.py  answer.py  async_jobs.py  backend.py  backend_memory.py  backend_ov.py  circuit_breaker.py  config.py  conflict_resolution.py  decision_report.py  dedup.py  domain_filter.py  env_loader.py  feedback.py  feedback_store.py  file_lock.py  freshness.py  governance.py  governance_audit.py  governance_cli.py  governance_flags.py  governance_phases.py  governance_report.py  governance_traces.py  interest_analyzer.py  log_rotation.py  logging_setup.py  memory_capture.py  metrics.py  nlp_utils.py  pipeline.py  pipeline_v2.py  query_log.py  retrieval.py  retrieval_v2.py  review.py  review_cli.py  router.py  router_config.json  scheduler.py  (+6 more)
curator/legacy/: README.md  answer.py  dedup.py  pipeline.py  retrieval.py
curator/prompts/: judge.prompt
eval/: benchmark.py  deadlock_repro.py
eval/results/: benchmark_2026-02-19_0912.json  benchmark_2026-02-19_0928.json  benchmark_2026-02-19_1005.json  benchmark_2026-02-19_1553.json  benchmark_2026-02-19_1633.json  benchmark_2026-02-19_1808.json
schemas/: case_template.md  pattern_template.md
scripts/: analyze_weak.py  async_job_cli.py  common.py  coverage_tuning_suggest.py  freshness_scan.py  query_log_aggregate.py  regression.sh  regression_record.sh  smoke_minimal.sh  strengthen.py  ttl_rebalance.py
skills/curator/: SKILL.md
tests/: conftest.py  test_async_ingest.py  test_async_job_cli.py  test_async_jobs.py  test_auto_summarize.py  test_backend.py  test_circuit_breaker.py  test_conflict_resolution.py  test_conftest_fixtures.py  test_core.py  test_coverage_tuning.py  test_decision_report.py  test_dedup_enhanced.py  test_domain_filter.py  test_eval_regression.py  test_feedback_store_extra.py  test_freshness_scan.py  test_governance.py  test_governance_audit.py  test_governance_cli_extra.py  test_governance_cli_extra2.py  test_governance_cli_markdown.py  test_governance_flags.py  test_governance_report.py  test_governance_traces.py  test_interest_analyzer.py  test_log_rotation.py  test_logging_setup.py  test_metrics.py  test_nlp_utils.py  test_packaging.py  test_public_api.py  test_query_log.py  test_query_log_aggregate.py  test_retrieval_feedback.py  test_retrieval_parallel.py  test_review_cli.py  test_review_helpers.py  test_scheduler.py  test_search_cache.py  (+6 more)
