[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openviking-curator"
dynamic = ["version"]
description = "Knowledge governance plugin for OpenViking — coverage assessment, external search, review, ingest, dedup, and feedback-driven ranking."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ponsde" }]
requires-python = ">=3.10"
keywords = ["openviking", "knowledge-base", "rag", "curator", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "openviking>=0.1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[project.scripts]
curator-query = "curator_query:main"
curator-mcp = "mcp_server:main"

[project.urls]
Homepage    = "https://github.com/ponsde/OpenViking_Curator"
Repository  = "https://github.com/ponsde/OpenViking_Curator"
Issues      = "https://github.com/ponsde/OpenViking_Curator/issues"

[tool.setuptools]
py-modules = ["curator_query", "mcp_server"]

[tool.setuptools.dynamic]
version = {attr = "curator._version.__version__"}

[tool.setuptools.packages.find]
include = ["curator*"]

[tool.setuptools.package-data]
curator = ["py.typed", "prompts/*.prompt", "router_config.json"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["curator/legacy/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # errors, pyflakes, warnings, isort
ignore = [
    "E501",   # line too long — handled by formatter, not strict here
    "F401",   # unused import — too noisy during dev
    "E402",   # module level import not at top — scripts need sys.path hack
]

[tool.ruff.lint.isort]
known-first-party = ["curator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q"
